--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,9 +29,13 @@
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать кандидата</a>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex" th:if="${user.name == 'Гость'}">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
                     <a class="nav-link text-secondary me-3" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
         </div>
@@ -46,82 +50,3 @@
 </div>
 </body>
 </html>
-
-
-<!--<!doctype html>-->
-<!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">-->
-<!--<head>-->
-<!--    &lt;!&ndash; Required meta tags &ndash;&gt;-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-
-<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"-->
-<!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-<!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"-->
-<!--            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"-->
-<!--            crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"-->
-<!--            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"-->
-<!--            crossorigin="anonymous"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"-->
-<!--            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"-->
-<!--            crossorigin="anonymous"></script>-->
-
-<!--    <title>Работа мечты!</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container">-->
-<!--    <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<!--        <a class="navbar-brand" href="#">DREAM JOB</a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"-->
-<!--                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
-<!--            <div class="navbar-nav">-->
-<!--                <a class="nav-item nav-link active" href="#">Главная <span class="sr-only">(current)</span></a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/loginPage}">Войти</a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/posts}">Вакансии</a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/formAddUser}">Добавить пользователя</a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>-->
-<!--                <a class="nav-item nav-link" th:href="@{/formAddCandidate}">Добавить кандидата</a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </nav>-->
-<!--    <div class="row">-->
-<!--        <table class="table">-->
-<!--            <thead>-->
-<!--            <tr>-->
-<!--                <th scope="col">#</th>-->
-<!--                <th scope="col">First</th>-->
-<!--                <th scope="col">Last</th>-->
-<!--                <th scope="col">Handle</th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--            <tr>-->
-<!--                <th scope="row">1</th>-->
-<!--                <td>Mark</td>-->
-<!--                <td>Otto</td>-->
-<!--                <td>@mdo</td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <th scope="row">2</th>-->
-<!--                <td>Jacob</td>-->
-<!--                <td>Thornton</td>-->
-<!--                <td>@fat</td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <th scope="row">3</th>-->
-<!--                <td>Larry</td>-->
-<!--                <td>the Bird</td>-->
-<!--                <td>@twitter</td>-->
-<!--            </tr>-->
-<!--            </tbody>-->
-<!--        </table>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
