--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -5,9 +5,14 @@
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
 
     <title>Вход</title>
 </head>
@@ -24,9 +29,13 @@
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать кандидата</a>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex" th:if="${user.name == 'Гость'}">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
-                    <a class="nav-link text-light" th:href="@{/users/login}">Войти</a>
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
         </div>
@@ -41,7 +50,8 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label"><b>Почта</b></label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru"
+                               required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label"><b>Пароль</b></label>
@@ -49,12 +59,14 @@
                     </div>
                     <div class="mb-3 row">
                         <div class="col-7">
-                            <p>Не зарегистрированы? <span><a th:href="@{/users/register}">Зарегистрироваться</a></span></p>
+                            <p>Не зарегистрированы? <span><a th:href="@{/users/register}">Зарегистрироваться</a></span>
+                            </p>
                         </div>
                         <div class="col-5">
                             <div class="row">
                                 <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Отмена</a></div>
-                                <div class="col-6"><button class="btn btn-primary w-100" type="submit">Войти</button>
+                                <div class="col-6">
+                                    <button class="btn btn-primary w-100" type="submit">Войти</button>
                                 </div>
                             </div>
                         </div>
